--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
@@ -58,6 +59,7 @@
     "autoprefixer": "^10.4.4",
     "formik": "^2.2.9",
     "postcss": "^8.4.12",
+    "postcss-import": "^14.1.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "tailwindcss": "^3.0.23",
